<resources>
    <string name="app_name">Favor</string>
    <string name="jump">跳过</string>
    <string name="collections">我的收藏</string>
    <string name="discover">探索</string>
    <string name="follow">关注</string>
    <string name="manager">我</string>
    <string name="signin">登录</string>
    <string name="signinPrompt">手机号/账户名</string>
    <string name="signup">注册</string>
    <string name="signupNow">没有账号？现在去注册</string>
    <string name="signinNow">已有Favor账号？去登录</string>
    <string name="password">密码</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="getVerfyCode">获取</string>
</resources>
